--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+li {
+    list-style-type: none;
+}
+
+h3,
+p {
+    margin: 0;
+    padding: 0;
+}
