--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,3 +1,8 @@
-<div class="d-flex flex-row w-100">
-    <app-user [users]="users" class="d-flex justify-content-center row row-cols-12 row-cols-lg-4"></app-user>
-</div>
+<section class="container mt-5">
+    <div class="row g-3">
+        <article class="col-12 col-md-6 col-lg-3" *ngFor="let user of users">
+            <app-user [myUsers]="user">
+            </app-user>
+        </article>
+    </div>
+</section>
