--- a/src/app/pages/form-new-user/form-new-user.component.html
+++ b/src/app/pages/form-new-user/form-new-user.component.html
@@ -46,5 +46,6 @@
         </div>
         <input type="submit" value="Guardar" class="d-inline-block w-25 p-2 btn btn-primary"
             [disabled]="!newUserForm.valid">
+        <input type="button" value="Editar" class="d-inline-block w-25 p-2 btn btn-primary" (click)=" editForm()">
     </form>
 </section>
