--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+    height: 100vh;
+}
+
 li {
     list-style-type: none;
 }
@@ -7,4 +10,9 @@ h3,
 p {
     margin: 0;
     padding: 0;
+}
+
+.hover:hover {
+    cursor: pointer;
+
 }
