API and http requests

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="mx-5 navbar navbar-expand-lg navbar-light border-bottom border-2 border-dark-subtle">
         <div class="container-fluid">
             <a class="navbar-brand">Lista de Usuarios</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -14,7 +14,6 @@
                     <li class="nav-item">
                         <a class="nav-link" [routerLink]="['/newuser']">Nuevo Usuario</a>
                     </li>
-
                 </ul>
             </div>
         </div>
