--- a/src/app/pages/form-new-user/form-new-user.component.html
+++ b/src/app/pages/form-new-user/form-new-user.component.html
@@ -44,7 +44,7 @@
                 La URL introducida es incorrecta
             </p>
         </div>
-        <input type="submit" value="Guardar" class="d-inline-block w-25 p-2 btn btn-primary"
+        <input type="submit" value="Guardar" class="d-inline-block w-25 p-2 btn btn-outline-dark"
             [disabled]="!newUserForm.valid">
         <input type="button" value="Editar" class="d-inline-block w-25 p-2 btn btn-primary" (click)=" editForm()">
     </form>
