--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,8 +1,11 @@
 <section class="container mt-5">
-    <div class="row g-3">
-        <article class="col-12 col-md-6 col-lg-3" *ngFor="let user of users">
+    <div class="row gx-3 gy-4">
+        <article class="col-12 col-md-6 col-lg-3"
+            *ngFor="let user of users | paginate: {itemsPerPage: usersPerPage, currentPage: pagination}">
             <app-user [myUsers]="user">
             </app-user>
         </article>
     </div>
+    <pagination-controls (pageChange)="pagination = $event" previousLabel="Anterior" nextLabel="Siguiente"
+        class="d-block m-5 text-center" [responsive]=true></pagination-controls>
 </section>
